--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
         <img class="cover_pic" src="./assat/cover.jpg" alt="coverphoto">
         <img class="profile_pic" src="./assat/profilepic.jpg" alt="profilepic"><br>
       </div>
-    
       <h3>Vishnu Vk Kumar</h3>
       <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-facebook"></i> Facebook</button></span></section>
-    <section><span class="title">section 2</span></section>
+   
+      <section><span class="title">
+        <div class="instagram">
+          <img class="insta_prof" src="./assat/profilepic.jpg" alt="instgram_profile_pic">
+          <h4 class="insta_name">vishnukumarnv</h4>
+          <p class="follow">30 posts &nbsp; *** followers  &nbsp; *** following</p>
+          <h5 class="fullname">VISHNU KUMAR NV</h5>
+          <p class="barcode">█║▌│█│║▌║││█║▌</p>
+          <p class="text1">🍃Believe in the future!</p>
+          <p class="text2">🚶🏻‍♂️ᴠᴋ™</p>
+      </div>
+      <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-instagram"></i> instagram</button></span></section>
+       
+      </span></section>
     <section><Span class="title">section 3</Span></section>
 </body>
 </html>
