--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
           <p class="text2">🚶🏻‍♂️ᴠᴋ™</p>
       </div>
       <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-instagram"></i> instagram</button></span></section>
-       
-      </span></section>
-    <section><Span class="title">section 3</Span></section>
+       </span></section>
+    <section><Span class="title">
+      <div class="xdiv">
+        
+        <img class="xcover" src="./assat/xcover.jpeg" alt="cover_pic">
+        <img class="xprofile" src="./assat/xprofile.jpg" alt="x_profile-pic">
+        <h4 class="xtext1">vishnu kumar nv</h4>
+        </div>
+        <button type="button" class="btn btn-primary btn-dark btn-lg"><i class="bi bi-twitter-x"></i> (formerly twitter)</button>
+
+    </Span></section>
     </body>
 </html>
