--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <img class="profile_pic" src="./assat/profilepic.jpg" alt="profilepic"><br>
       </div>
       <h3>Vishnu Vk Kumar</h3>
-      <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-facebook"></i> Facebook</button></span></section>
+      <a href="https://www.facebook.com/vishnuvk.kumar.3?mibextid=ZbWKwL ">      <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-facebook"></i> Facebook</button></span></section>
+      </a>
    
       <section><span class="title">
         <div class="instagram">
@@ -27,7 +28,8 @@
           <p class="text1">🍃Believe in the future!</p>
           <p class="text2">🚶🏻‍♂️ᴠᴋ™</p>
       </div>
-      <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-instagram"></i> instagram</button></span></section>
+      <a href="https://www.instagram.com/vishnukumarnv?igsh=YTBmNXFxZTBvZndv ">      <button type="button" class="btn btn-primary btn-lg"><i class="bi bi-instagram"></i> instagram</button></span></section>
+      </a>
        </span></section>
     <section><Span class="title">
       <div class="xdiv">
@@ -36,7 +38,8 @@
         <img class="xprofile" src="./assat/xprofile.jpg" alt="x_profile-pic">
         <h4 class="xtext1">vishnu kumar nv</h4>
         </div>
-        <button type="button" class="btn btn-primary btn-dark btn-lg"><i class="bi bi-twitter-x"></i> (formerly twitter)</button>
+        <a href="https://x.com/vishnukumarnv15?t=xAyySA4lGx6bCzrrctQNhQ&s=09">        <button type="button" class="btn btn-primary btn-dark btn-lg"><i class="bi bi-twitter-x"></i> (formerly twitter)</button>
+        </a>
 
     </Span></section>
     </body>
